WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88554
RenderLayer::paintChildLayerIntoColumns doesn't properly pixel snap
https://bugs.webkit.org/show_bug.cgi?id=88554
Summary
RenderLayer::paintChildLayerIntoColumns doesn't properly pixel snap
Levi Weintraub
Reported
2012-06-07 11:03:57 PDT
Instead it's improperly promoting FractionalLayoutUnits to floats for clipping, and ints for offsets. Downstream Chromium bug:
http://code.google.com/p/chromium/issues/detail?id=131339
Attachments
Patch
(550.57 KB, patch)
2012-06-07 12:05 PDT
,
Levi Weintraub
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cq-02
(712.90 KB, application/zip)
2012-06-07 15:59 PDT
,
WebKit Review Bot
no flags
Details
Archive of layout-test-results from ec2-cr-linux-03
(559.39 KB, application/zip)
2012-06-07 19:10 PDT
,
WebKit Review Bot
no flags
Details
Patch for landing
(550.61 KB, patch)
2012-06-08 14:27 PDT
,
Levi Weintraub
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Levi Weintraub
Comment 1
2012-06-07 12:05:08 PDT
Created
attachment 146353
[details]
Patch
Levi Weintraub
Comment 2
2012-06-07 12:59:17 PDT
Comment on
attachment 146353
[details]
Patch Thanks, Darin!
WebKit Review Bot
Comment 3
2012-06-07 15:59:04 PDT
Comment on
attachment 146353
[details]
Patch Rejecting
attachment 146353
[details]
from commit-queue. New failing tests: fast/sub-pixel/column-clipping.html Full output:
http://queues.webkit.org/results/12918293
WebKit Review Bot
Comment 4
2012-06-07 15:59:09 PDT
Created
attachment 146407
[details]
Archive of layout-test-results from ec2-cq-02 The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: ec2-cq-02 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
WebKit Review Bot
Comment 5
2012-06-07 19:10:17 PDT
Comment on
attachment 146353
[details]
Patch
Attachment 146353
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/12918325
New failing tests: fast/sub-pixel/column-clipping.html
WebKit Review Bot
Comment 6
2012-06-07 19:10:21 PDT
Created
attachment 146452
[details]
Archive of layout-test-results from ec2-cr-linux-03 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-03 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Levi Weintraub
Comment 7
2012-06-08 14:27:07 PDT
Created
attachment 146649
[details]
Patch for landing
WebKit Review Bot
Comment 8
2012-06-08 22:44:29 PDT
Comment on
attachment 146649
[details]
Patch for landing Clearing flags on attachment: 146649 Committed
r119893
: <
http://trac.webkit.org/changeset/119893
>
WebKit Review Bot
Comment 9
2012-06-08 22:44:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug