RenderLayer::paintChildLayerIntoColumns doesn't properly pixel snap https://bugs.webkit.org/show_bug.cgi?id=88554

Reviewed by Darin Adler.

Source/WebCore:

Column handling code in RenderLayer and RenderBlock was improperly clipping and translating
using floats derived from FractionalLayoutUnits without pixel snapping. RenderLayer also
improperly stored render tree offsets in ints instead of LayoutUnits. This corrects this
issue.

Test: fast/sub-pixel/column-clipping.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paintColumnContents):
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintChildLayerIntoColumns):

LayoutTests:

* fast/sub-pixel/column-clipping-expected.html: Added.
* fast/sub-pixel/column-clipping.html: Added.
* platform/chromium-mac-snowleopard/fast/multicol/nested-columns-expected.png:
* platform/chromium-mac-snowleopard/fast/multicol/vertical-lr/nested-columns-expected.png:
* platform/chromium-mac-snowleopard/fast/multicol/vertical-rl/nested-columns-expected.png:
* platform/chromium-mac/fast/borders/border-antialiasing-expected.png:
* platform/chromium/TestExpectations:


Canonical link: https://commits.webkit.org/106529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119893 268f45cc-cd09-0410-ab3c-d52691b4dbfc